[package]
name = "kernel"
version = "0.1.0"
edition = "2021" 
test = false

[dependencies]
bootloader_api = "0.11"
uart_16550 = "0.3"
noto-sans-mono-bitmap = "0.3"
spin = "0.9"
x86_64 = { version = "0.15", features = ["instructions", "abi_x86_interrupt"] }
pc-keyboard = "0.8"
acpi = "5.1.0"
lazy_static = { version = "1.5", features = ["spin_no_std"] }

# The profiles should be in the workspace root (main Cargo.toml)
# but they can be here too
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"